--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2-binary==2.9.9
 pymongo==4.6.1
 redis==5.0.1
 SQLAlchemy==2.0.23
+cassandra-driver==3.29.0
 
 # Data Processing
 pandas==2.1.3
